--- a/styles/mystylesheet.css
+++ b/styles/mystylesheet.css
@@ -1,5 +1,45 @@
 body {
-    /* height: 100%; */
+    background-color: black;
     background-image: url("https://papers.co/wallpaper/papers.co-sg08-green-ray-wood-light-gradation-blur-36-3840x2400-4k-wallpaper.jpg");
-    /* background-image: url("https://wallpaperaccess.com/full/1155039.png"); */
+    background-repeat: no-repeat;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    position: relative;
+  }
+
+.grand-container {
+    display: grid;
+}
+
+.banner-div {
+    margin: 3%;
+    background-color: rgba(0,0,0,0.93);
+    border: 1px solid black;
+    border-radius: 30px;
+    /* height: 500px; */
+    color: whitesmoke;
+    text-align: center;
+}
+
+.first-div-stacks {
+    background-color: blueviolet;
+    height: 500px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.left-fe-stack {
+    /* height: 45%; */
+    margin: 3%;
+    background-color: red;
+}
+
+.right-be-stack {
+    /* height: 45%; */
+    margin: 3%;
+    background-color: greenyellow;
 }
