--- a/styles/mystylesheet.css
+++ b/styles/mystylesheet.css
@@ -1,7 +1,7 @@
 body {
     background-color: black;
-    /* background-image: url("https://papers.co/wallpaper/papers.co-sg08-green-ray-wood-light-gradation-blur-36-3840x2400-4k-wallpaper.jpg"); */
-    background-image: url("https://cdn.crispedge.com/68be8d.webp");
+    background-image: url("https://papers.co/wallpaper/papers.co-sg08-green-ray-wood-light-gradation-blur-36-3840x2400-4k-wallpaper.jpg");
+/*     background-image: url("https://cdn.crispedge.com/68be8d.webp"); */
     /* background-repeat: no-repeat; */
 }
 
